# bmw

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
src/bmw/: __init__.py  chapter1.py  chapter2.py  chapter4.py  chapter5.py
tests/bmw/: test_chapter1.py  test_chapter2.py  test_chapter4.py  test_chapter5.py
